# libxzfile

./: .gitignore  COPYING  Makefile.am  TODO  configure.ac
src/: Makefile.am
src/common/: sysdefs.h
src/libxzfile/: Makefile.am  backend_cb.c  backend_dummy.c  backend_fd.c  backend_gzin.c  callback_crc32.c  internal.h  internal_fill.c  internal_fixreadpos.c  internal_flush.c  internal_seek.c  xzf_close.c  xzf_eof.c  xzf_fileno.c  xzf_flush.c  xzf_getchar.c  xzf_geterr.c  xzf_getflags.c  xzf_getinbuf.c  xzf_getinfo.c  xzf_getln.c  xzf_getoutbuf.c  xzf_lock.c  xzf_off_abs.c  xzf_peekchar.c  xzf_peekin.c  xzf_peekout.c  xzf_pending.c  xzf_purge.c  xzf_putchar.c  xzf_puts.c  xzf_read.c  xzf_seek.c  xzf_seterr.c  xzf_setflags.c  xzf_setinbuf.c  xzf_setoutbuf.c  xzf_skip.c  xzf_stdio.c  xzf_stream.c  (+4 more)
src/xzfcat/: Makefile.am  xzfcat.c
tests/: Makefile.am  test_read.c
